[tool.poetry]
name = "best-school-districts"
version = "0.1.0"
description = "Ranking school districts on publicly available data."
authors = ["John Freeman <jfreeman08@gmail.com>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"

[tool.poetry.dev-dependencies]
yapf = "^0.29.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
